fix(client): some tooltips don't render correctly due to extra whitespace

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -717,7 +717,6 @@ table.promoted-attributes-in-tooltip th {
 .tooltip {
     font-size: var(--main-font-size) !important;
     z-index: calc(var(--ck-z-panel) - 1) !important;
-    white-space: pre-wrap;
 }
 
 .tooltip.tooltip-top {
